@startuml Activity_State
title Diagrama de Estados - Appointment

[*] --> PENDING : Cita creada

state PENDING {
}

state CONFIRMED {
}

state COMPLETED {
}

state CANCELLED {
}

PENDING --> CONFIRMED : Barbero confirma\n(change_status)
PENDING --> CANCELLED : Cliente o barbero cancela\n(change_status)
CONFIRMED --> COMPLETED : Barbero marca como completada\n(change_status)
CONFIRMED --> CANCELLED : Cliente o barbero cancela\n(change_status)

COMPLETED --> [*]
CANCELLED --> [*]

note right of PENDING
  **State Pattern**
  PendingState.allowed_transitions()
  → [CONFIRMED, CANCELLED]
end note

note right of CONFIRMED
  ConfirmedState.allowed_transitions()
  → [COMPLETED, CANCELLED]
end note

note right of COMPLETED
  CompletedState.allowed_transitions()
  → [] (estado terminal)
end note

note right of CANCELLED
  CancelledState.allowed_transitions()
  → [] (estado terminal)
end note

@enduml
